--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-8">
             <div class="card mt-4 mb-4">
-                여기는 내가 추가한 follow한 사람들 스토리 들어감
+                여기는 내가 추가한 follow한 사람들 스토리 들어갈거다(확인용)
             </div>
             {% for post in posts %}
                 <div class="card mb-5 sns-card">
